--- a/Day3CompAfternoon.html
+++ b/Day3CompAfternoon.html
@@ -168,6 +168,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 [1,] 241.38</code></pre>
 </div>
 </div>
+<p>new change!!</p>
+<p>```</p>
 
 </main>
 <!-- /main column -->
