--- a/Day3CompAfternoon.html
+++ b/Day3CompAfternoon.html
@@ -169,6 +169,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </div>
 </div>
 <p>new change!!</p>
+<p>new change test test</p>
 <p>```</p>
 
 </main>
